hotfixed some padding issues and aligns

--- a/css/style.css
+++ b/css/style.css
@@ -192,7 +192,8 @@ footer {
   background-color: var(--terra-cotta);
 }
 footer p {
-  padding: 3vh;
+  padding: 3vh 5vh;
+  text-align: center;
   font-size: 2.5vh;
 }
 footer p a {
@@ -201,7 +202,7 @@ footer p a {
   font-weight: bold;
 }
 footer .copyright {
-  padding: 5vh;
+  padding: 2vh;
   color: var(--jet);
   font-size: 2vh;
 }
